# Kepler_Equation

./: CMakeLists.txt  README.md  main.cpp
hdrs/: args.hpp  bisection.hpp  kepler.hpp  newton.hpp  simulation.hpp
src/: bisection.cpp  kepler.cpp  newton.cpp  simulation.cpp
